# actix-graphql-template

./: .env.sample  Cargo.toml  Dockerfile  README.md  compose.yml
src/: db.rs  main.rs  objects.rs
src/objects/: query.rs
