[package]
name = "graphql-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
async-graphql = "6.0.4"
async-graphql-actix-web = "6.0.4"
diesel = {version = "2.1.1", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
